@@ -495,7 +495,7 @@ class MavenBuildSystem implements BuildSystem {
 				List<Artifact> snapshotDependencies = pom.getSnapshotDependencies();
 
 				if (!snapshotDependencies.isEmpty()) {
-					throw new IllegalStateException(String.format("Found snapshot dependencies %s!", snapshotDependencies));
+					throw new IllegalStateException("Found snapshot dependencies %s!".formatted(snapshotDependencies));
 				}
 			}
 
@@ -631,8 +631,8 @@ class MavenBuildSystem implements BuildSystem {
 			s = s.replaceAll(Pattern.quote("standalone=\"no\"?><"), "standalone=\"no\"?>" + IOUtils.LINE_SEPARATOR + "<");
 		}
 
-		s = s.replace(String.format("<repositories>%n\t\t%n\t</repositories>"),
-				String.format("<repositories>%n\t</repositories>"));
+		s = s.replace("<repositories>%n\t\t%n\t</repositories>".formatted(),
+				"<repositories>%n\t</repositories>".formatted());
 
 		if (!s.endsWith(IOUtils.LINE_SEPARATOR)) {
 			s += IOUtils.LINE_SEPARATOR;
