@@ -529,13 +529,13 @@ public class DependencyOperations {
 
 		} catch (Exception o_O) {
 
-			if (o_O instanceof HttpClientErrorException) {
-				if (((HttpClientErrorException) o_O).getStatusCode() == HttpStatus.NOT_FOUND) {
+			if (o_O instanceof HttpClientErrorException exception) {
+				if (exception.getStatusCode() == HttpStatus.NOT_FOUND) {
 					return Collections.emptyList();
 				}
 			}
 
-			throw new RuntimeException(String.format("Cannot determine available versions for %s", dependency), o_O);
+			throw new RuntimeException("Cannot determine available versions for %s".formatted(dependency), o_O);
 		}
 	}
 
